@@ -20,6 +20,7 @@ import {
 	maybeShowCashAppLimitNotice,
 	removeCashAppLimitNotice,
 } from 'wcstripe/stripe-utils/cash-app-limit-notice-handler';
+import { isLinkEnabled } from 'wcstripe/stripe-utils';
 
 /**
  * Gets the Stripe element options.
@@ -27,7 +28,7 @@ import {
  * @return {Object} The Stripe element options.
  */
 const getStripeElementOptions = () => {
-	const options = {
+	let options = {
 		fields: {
 			billingDetails: {
 				name: 'never',
@@ -48,6 +49,26 @@ const getStripeElementOptions = () => {
 			googlePay: 'never',
 		},
 	};
+
+	// Prefill Link customer data if available.
+	if ( isLinkEnabled() ) {
+		const userEmail = document.getElementById( 'email' )?.value;
+		if ( userEmail ) {
+			const userPhone =
+				document.getElementById( 'billing-phone' )?.value ||
+				document.getElementById( 'shipping-phone' )?.value;
+
+			options = {
+				...options,
+				defaultValues: {
+					billingDetails: {
+						email: userEmail,
+						phone: userPhone,
+					},
+				},
+			};
+		}
+	}
 
 	return options;
 };
